--- a/package.json
+++ b/package.json
@@ -7,25 +7,24 @@
     "whop-proxy": "whop-proxy",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "whop-proxy": "whop-proxy"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@whop-apps/sdk": "^0.0.1-canary.35",
+    "@whop-apps/sdk": "0.0.1-canary.109",
     "frosted-ui": "0.0.1-canary.10",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.17.19",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
